2007-11-19  Bob Wilson  <bob.wilson@acm.org>
	
	* gas/lns/lns.exp: Run lns-common-1 with alternate source for ia64.
	* gas/lns/lns-common-1-ia64.s: New file.
	
2007-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/dv-raw-err.s: Add tests for ar.ruc.
	* gas/ia64/dv-waw-err.s: Likewise.
	* gas/ia64/invalid-ar.s: Likewise.

	* gas/ia64/regs.s: Add tests for ar.ruc and ar44.

	* gas/ia64/dv-raw-err.l: Updated.
	* gas/ia64/dv-waw-err.l: Likewise.
	* gas/ia64/invalid-ar.l: Likewise.
	* gas/ia64/regs.d: Likewise.

2007-11-13  Alan Modra  <amodra@bigpond.net.au>

	* gas/macros/purge.s: Delete irpc loops.

2007-11-12  Tristan Gingold  <gingold@adacore.com>

	* gas/ppc/regnames.d: New.
	* gas/ppc/regnames.s: Likewise.
	* gas/ppc/ppc.exp: Run it.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* ia64-dis.c (print_insn_ia64): Generate symbolic names for cr
	registers instead of register number.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* gas/elf/elf.exp (run_elf_list_test): Fix typo.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* gas/ppc/test1xcoff32.d: Updated to match RTOC bug fix.

2007-11-06  Paul Brook  <paul@codesourcery.com>

	* gas/arm/mul-overlap.s: Add umull and smlal.
	* gas/arm/mul-overlap.l: Update expected results.

2007-11-06  Nick Clifton  <nickc@redhat.com>

	* gas/elf/elf.exp: Disable ehopt test for mn10300.

2007-11-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.d: New.
	* gas/i386/i386.s: Likewise.

	* gas/i386/i386.exp: Run i386.

	* gas/i386/x86_64.s: Add tests for movsx, movsbl, movsbq,
	movsbw, movswl, movswq, movzx, movzb, movzbl, movzbq,
	movzbw, movzwl and movzwq.
	* gas/i386/x86_64.d: Updated.

2007-10-31  Nick Clifton  <nickc@redhat.com>

	* gas/cfi/cfi-common-6.d: Allow for possible relocation of the
	.debug.eh_frame section.

2007-10-30  Nick Clifton  <nickc@redhat.com>

	* gas/all/gas.exp: Do not run diff1.s test for mn10300.

2007-10-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5221