@@ -63,12 +63,12 @@ Disassembly of section .text:
 .*:	ed 21 40 03 60 49 [	 ]*srxt	%f6,%f2,3\(%r1,%r4\)
 .*:	b3 d3 40 62 [	 ]*sdtr	%f6,%f2,%f4
 .*:	b3 db 40 62 [	 ]*sxtr	%f6,%f2,%f4
-.*:	ed 61 20 03 00 50 [	 ]*tcet	%f6,3\(%r1,%r2\)
-.*:	ed 61 20 03 00 54 [	 ]*tcdt	%f6,3\(%r1,%r2\)
-.*:	ed 61 20 03 00 58 [	 ]*tcxt	%f6,3\(%r1,%r2\)
-.*:	ed 61 20 03 00 51 [	 ]*tget	%f6,3\(%r1,%r2\)
-.*:	ed 61 20 03 00 55 [	 ]*tgdt	%f6,3\(%r1,%r2\)
-.*:	ed 61 20 03 00 59 [	 ]*tgxt	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 50 [	 ]*tdcet	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 54 [	 ]*tdcdt	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 58 [	 ]*tdcxt	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 51 [	 ]*tdget	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 55 [	 ]*tdgdt	%f6,3\(%r1,%r2\)
+.*:	ed 61 20 03 00 59 [	 ]*tdgxt	%f6,3\(%r1,%r2\)
 .*:	01 0a [	 ]*pfpo
 .*:	c8 31 10 0a 20 14 [	 ]*ectg	10\(%r1\),20\(%r2\),%r3
 .*:	c8 32 10 0a 20 14 [	 ]*csst	10\(%r1\),20\(%r2\),%r3
